--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
+  <noscript>please activate javascript uwu</noscript>
 </body>
 
 </html>
